<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_tools"/>
        <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"/>
    </group>
    <item android:title="@string/nav_share">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/nav_share"/>
            <item
                    android:id="@+id/nav_playstore"
                    android:icon="@android:drawable/ic_media_play"
                    android:title="@string/nav_play"/>
            <item
                    android:id="@+id/nav_email"
                    android:icon="@android:drawable/ic_dialog_email"
                    android:title="@string/nav_email"/>
        </menu>
    </item>
</menu>