<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Opsionet"
        android:paddingTop="@dimen/option_margin">
    <Switch
            android:text="@string/txtDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swiOptNot"
            android:textSize="@dimen/teksti"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginRight="@dimen/option_margin"/>
    <TextView
            android:text="@string/txtDMExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOptNot"
            android:layout_below="@id/swiOptNot"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginStart="@dimen/option_margin"
            android:layout_marginRight="@dimen/option_margin"/>
    <Switch
            android:text="@string/txtSiguria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swiOptSig"
            android:layout_below="@id/txtOptNot"
            android:textSize="@dimen/teksti"
            android:layout_marginTop="@dimen/option_margin"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginRight="@dimen/option_margin"/>
    <TextView
            android:text="@string/txtSigExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOptSig"
            android:layout_below="@id/swiOptSig"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginStart="@dimen/option_margin"
            android:paddingRight="@dimen/option_margin"
            android:paddingEnd="@dimen/option_margin"
            tools:ignore="RtlSymmetry"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_below="@id/txtOptSig"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/option_margin"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/stat_sys_warning"
            android:tint="@color/colorAccent"
            android:id="@+id/imgfshij"
            android:layout_toEndOf="@+id/deleteAll"
            android:layout_toRightOf="@+id/deleteAll"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_above="@+id/txtOptFshij"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/danger_content_desc"/>
    <TextView
            android:text="@string/option_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteAll"
            android:layout_below="@id/divider3"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginTop="@dimen/option_margin"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/option_margin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/teksti"/>
    <TextView
            android:text="@string/txtOptDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOptFshij"
            android:layout_below="@id/deleteAll"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginStart="@dimen/option_margin"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/stat_sys_warning"
            android:tint="@color/colorAccent"
            android:id="@+id/imgreset"
            android:layout_toEndOf="@+id/reset"
            android:layout_toRightOf="@+id/reset"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_above="@+id/txtOptRes"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/danger_content_desc"/>
    <TextView
            android:text="@string/option_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:layout_below="@id/txtOptFshij"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginTop="@dimen/option_margin"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/option_margin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/teksti"/>
    <TextView
            android:text="@string/txtOptRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOptRes"
            android:layout_below="@id/reset"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/option_margin"
            android:layout_marginStart="@dimen/option_margin"/>
    <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_below="@id/txtOptRes"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/option_margin"/>
    <TextView
            android:text="@string/dev_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dev_message"
            android:textSize="18sp"
            android:layout_marginStart="@dimen/option_margin"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/option_margin"
            android:layout_marginLeft="@dimen/option_margin"/>
</RelativeLayout>