<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".ShtoNdrysho">
    <Button
            android:text="@string/shto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:background="@drawable/buttons_style"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/linearMain"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/linearMain"
            android:baselineAligned="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:weightSum="3">
            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etEmri"
                    android:layout_margin="10dp"
                    android:hint="@string/emri"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:autofillHints=""
                    tools:targetApi="o"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etPershkrimi"
                    android:layout_margin="10dp"
                    android:hint="@string/pershkrimi"
                    android:gravity="center_horizontal"
                    android:autofillHints=""
                    tools:targetApi="o"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDoktori"
                    android:layout_margin="10dp"
                    android:hint="@string/doktori"
                    android:gravity="center_horizontal"
                    android:autofillHints=""
                    tools:targetApi="o"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/idDoza"
                    android:hint="@string/doza_hint"
                    android:gravity="center_horizontal"
                    tools:ignore="Autofill"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:weightSum="4">
            <TextView
                    android:text="@string/startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPrej"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/etDataF"
                    android:layout_margin="10dp"
                    android:hint="@string/dateHintFormat"
                    android:gravity="center_horizontal"
                    android:autofillHints=""
                    tools:targetApi="o"/>
            <TextView
                    android:text="@string/endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDeri"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/etDataM"
                    android:layout_margin="10dp"
                    android:hint="@string/dateHintFormat"
                    android:gravity="center_horizontal"
                    android:autofillHints=""
                    tools:targetApi="o"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>