<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.IntroActivity"
        android:background="@color/backgroundColor">
    <ImageView
            android:id="@+id/pillsIMG"
            android:contentDescription="@string/content_desc_pills"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hmm"
            android:cropToPadding="true"
            android:background="@color/backgroundColor"
            android:scaleType="centerCrop" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="0dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWelcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:textSize="30sp"
            android:id="@+id/txtWelcome"
            android:background="@color/backgroundColor"/>
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_image"
            android:layout_marginTop="16dp"
            android:background="@color/backgroundColor"
            android:weightSum="20" android:layout_marginRight="16dp">
        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_marginTop="@dimen/margin_image"
                android:layout_marginBottom="@dimen/margin_image"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtOpsionet"
                android:textSize="@dimen/teksti"
                android:id="@+id/txtOptions"
                android:layout_marginStart="@dimen/margin_image"
                android:gravity="center_horizontal"
                android:background="@color/backgroundColor"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_image"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:padding="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/backgroundColor"
                android:layout_weight="1">
            <Switch
                    android:text="@string/txtDarkMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/swiNotifications"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:paddingRight="40dp"
                    android:background="@color/backgroundColor"
                    android:paddingStart="16dp"
                    android:paddingEnd="40dp"/>
            <Switch
                    android:text="@string/txtSiguria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/swiSiguria"
                    android:layout_weight="1"
                    android:checked="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="40dp"
                    android:background="@color/backgroundColor"
                    android:paddingStart="16dp"
                    android:paddingEnd="40dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:padding="@dimen/margin_image"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:background="@color/backgroundColor"
                android:layout_weight="1">
            <TextView
                    android:text="@string/txtDMExplain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNotifications"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/backgroundColor"
                    tools:ignore="NestedWeights"/>
            <TextView
                    android:text="@string/txtSigExplain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSiguria"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:background="@color/backgroundColor"/>
        </LinearLayout>
        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_marginTop="@dimen/margin_image"
                android:layout_marginBottom="@dimen/margin_image"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_c"
                android:textSize="@dimen/teksti"
                android:id="@+id/txtTandCtitle"
                android:layout_marginStart="@dimen/margin_image"
                android:gravity="center_horizontal"
                android:background="@color/backgroundColor"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_image"/>
        <ScrollView
                android:layout_width="match_parent"
                android:paddingTop="@dimen/margin_image"
                android:paddingBottom="@dimen/margin_image"
                android:background="@color/backgroundColor"
                android:layout_weight="10"
                android:layout_height="0dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/backgroundColor">
                <TextView
                        android:text="@string/terms_conditions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txttandc"
                        android:paddingLeft="@dimen/margin_image"
                        android:paddingRight="@dimen/margin_image"
                        android:paddingBottom="@dimen/margin_image"
                        android:background="@color/backgroundColor"/>
            </LinearLayout>
        </ScrollView>
        <CheckBox
                android:text="@string/accept_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chxAccepted"
                android:background="@color/backgroundColor"
                android:layout_weight="1"/>
        <Button
                android:text="@string/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/btnTandC"
                android:background="#BBB"
                android:layout_weight="1" android:layout_gravity="center_horizontal" android:paddingLeft="50dp"
                android:paddingRight="50dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>